--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://i.postimg.cc/JnjRxRHV/netflix.png">
+    <link rel="icon" href="https://i.postimg.cc/JnjRxRHV/netflix.png" />
     <title>Netflix</title>
   </head>
   <body>
+    <div id="movie-detail-modal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
